--- a/components/sections/HeroSection/HeroCardGrid.module.css
+++ b/components/sections/HeroSection/HeroCardGrid.module.css
@@ -1,10 +1,11 @@
 .grid {
   display: flex;
+  gap: 31.795px;
   align-items: flex-end;
   justify-content: center;
-  gap: 32px;
-  height: 730px;
   width: 100%;
+  height: 730.382px;
+  opacity: 0.2;
   overflow: hidden;
   padding: 0 20px;
 }
